clusters/maktha/manifests/flux/receiver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: acme-http01-letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: flux.maktha.k8s.oci.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
  - hosts:
    - flux.maktha.k8s.oci.sh
    secretName: flux.maktha.k8s.oci.sh
